3-Se agregan las validaciones a registro con Java Script

--- a/inicio.html
+++ b/inicio.html
@@ -31,6 +31,9 @@
         <a href="inicio.html">Inicio</a>
         <a href="quienes_somos.html">Quienes Somos</a>
         <a href="Tienda.html">Tienda</a>
+        <a href="contacto.html">Contacto</a>
+        <a href="Registro.html">Registro</a>
+        <a href="login.html">Mi Cuenta</a>
     </nav> 
 
     
